--- a/web/resources/html/팝업-권장금액보장군설정.html
+++ b/web/resources/html/팝업-권장금액보장군설정.html
@@ -68,8 +68,8 @@
 							<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
 						</div>
 					</td>
-					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<th>사망</th>
+					<td>질병사망</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -83,7 +83,7 @@
 						</div>
 					</td>
 					<th>사망</th>
-					<td>상해 간병인 지원 입원일당</td>
+					<td>상해사망</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -97,7 +97,7 @@
 						</div>
 					</td>
 					<th>후유장해</th>
-					<td>상해사망</td>
+					<td>질병 3~79% 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -110,8 +110,8 @@
 							<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
 						</div>
 					</td>
-					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<th>후유장해</th>
+					<td>질병 80% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -124,8 +124,8 @@
 							<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
 						</div>
 					</td>
-					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<th>후유장해</th>
+					<td>상해 3~79% 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -138,8 +138,8 @@
 							<input id="checkbox6" type="checkbox"> <label for="checkbox6"></label>
 						</div>
 					</td>
-					<th>사망</th>
-					<td>상해 간병인 지원 입원일당</td>
+					<th>후유장해</th>
+					<td>상해 80% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -152,8 +152,8 @@
 							<input id="checkbox7" type="checkbox"> <label for="checkbox7"></label>
 						</div>
 					</td>
-					<th>후유장해</th>
-					<td>상해사망</td>
+					<th>암</th>
+					<td>일반암 진단비</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -166,8 +166,8 @@
 							<input id="checkbox8" type="checkbox"> <label for="checkbox8"></label>
 						</div>
 					</td>
-					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<th>암</th>
+					<td>고액암 진단비</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -180,8 +180,8 @@
 							<input checked id="checkbox9" type="checkbox"> <label for="checkbox9"></label>
 						</div>
 					</td>
-					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<th>암</th>
+					<td>유사암 진단비</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -194,8 +194,8 @@
 							<input id="checkbox10" type="checkbox"> <label for="checkbox10"></label>
 						</div>
 					</td>
-					<th>사망</th>
-					<td>상해 간병인 지원 입원일당</td>
+					<th>뇌혈관질환</th>
+					<td>뇌혈관</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -208,8 +208,288 @@
 							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 						</div>
 					</td>
-					<th>후유장해</th>
-					<td>상해사망</td>
+					<th>뇌혈관질환</th>
+					<td>뇌졸중</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>뇌혈관질환</th>
+					<td>뇌출혈</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
+						</div>
+					</td>
+					<th>심장질환</th>
+					<td>허혈성 심장질환 진단비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>심장질환</th>
+					<td>급성 심근경색증 진단비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>의료비</th>
+					<td>질병입원</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>의료비</th>
+					<td>질병통원</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>의료비</th>
+					<td>상해입원</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>의료비</th>
+					<td>상해통원</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>수술비</th>
+					<td>질병수술비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>수술비</th>
+					<td>상해수술비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>입원비(일당)</th>
+					<td>질병일당</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>입원비(일당)</th>
+					<td>상해일당</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>입원비(일당)</th>
+					<td>질병 간병인지원 입원일당</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>입원비(일당)</th>
+					<td>상해 간병인지원 입원일당</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>치매</th>
+					<td>중증치매진단</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>치매</th>
+					<td>경증치매진단</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>운전자</th>
+					<td>교통사고처리 지원금</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>운전자</th>
+					<td>변호사 선임비용</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>운전자</th>
+					<td>벌금</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>운전자</th>
+					<td>자동차사고 부상치료비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>배상책임</th>
+					<td>일상생활 배상책임</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -223,21 +503,7 @@
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
-					<td class="align_c">100,000</td>
-					<td class="align_c">
-						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
-						</div>
-					</td>
-				</tr>
-				<tr>
-					<td class="align_c">
-						<div class="check_box_set no_label">
-							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
-						</div>
-					</td>
-					<th>후유장해</th>
-					<td>상해사망</td>
+					<td>치아보철 치료비</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -251,7 +517,35 @@
 						</div>
 					</td>
 					<th>치아,화상,골절</th>
-					<td>질병 간병인 지원 입원일당</td>
+					<td>치아보존 치료비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>치아,화상,골절</th>
+					<td>화상 진단비</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
+						</div>
+					</td>
+					<th>치아,화상,골절</th>
+					<td>골절 진단비</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
