--- a/web/resources/html/index.html
+++ b/web/resources/html/index.html
@@ -67,7 +67,7 @@
 					<li>
 						<a href="#">
 							<span class="icon"><img alt="" src="/resources/images/gu.renew.common/main_left_icon_02.png"></span>
-							<span class="text">권장금액 담보군 설정</span> </a>
+							<span class="text">권장금액 보장군 설정</span> </a>
 					</li>
 				</ul>
 			</div>
@@ -462,7 +462,7 @@
 					<div class="bottom_position">
 						<ul class="util_menu">
 							<li><a class="btn" href="#">고객등록</a></li>
-							<li><a class="btn" href="#">권장금액 · 담보군 설정</a></li>
+							<li><a class="btn" href="#">권장금액 · 보장군 설정</a></li>
 							<li><a class="btn" href="#">가계약조회</a></li>
 						</ul>
 						<div class="btn_area">
