--- a/mobile/resources/html/가입현황.html
+++ b/mobile/resources/html/가입현황.html
@@ -102,10 +102,21 @@
 			<!-- insurance_list : s -->
 			<div class="insurance_list">
 				<div class="tit_box">
-					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>2</strong>건</span>
+					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>3</strong>건</span>
 				</div>
 
 				<div class="list_box">
+					<a class="insurance" href="#">
+						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
+						<div class="payment_info">
+							<span class="state">정상</span>
+							<div class="info">
+								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
+								<div class="date">2009.07.17~2082.07.17</div>
+							</div>
+						</div>
+						<div class="logo"><img alt="mertiz 메리츠화재" src="/resources/images/gu.renew.logo/logo_meritz.png"></div>
+					</a> 
 					<a class="insurance" href="#">
 						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 						<div class="payment_info">
