--- a/web/resources/html/가입현황.html
+++ b/web/resources/html/가입현황.html
@@ -465,7 +465,7 @@
 							<button class="insurance">
 								<div class="info">
 									<div class="inner">
-										<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
+										<div class="logo"><img alt="meritz 메리츠화재" src="/resources/images/gu.renew.logo/logo_meritz.png"></div>
 										<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
 										<div class="date"><span class="state">정상</span>2009.07.17~2082.07.17</div>
 									</div>
