--- a/mobile/resources/html/m팝업-권장금액보장군설정.html
+++ b/mobile/resources/html/m팝업-권장금액보장군설정.html
@@ -45,18 +45,20 @@
 <!-- layer_pop_wrap: s -->
 <div class="layer_pop_wrap pop_security_set">
 	<div class="layer_pop_header">
-		<h2 class="title">권장금액/보장군 설정</h2>
+		<!-- 20200107 -->
+		<h2 class="title"> 권장금액 설정</h2>
+		<!-- 20200107 -->
 	</div>
 	<div class="layer_pop_content">
 		<div class="tab_list">
-			<ul>
+			<!--20200107 <ul>
 				<li>
 					<button class="tab active"><span>권장금액 설정</span></button>
 				</li>
 				<li>
 					<button class="tab"><span>보장군 설정</span></button>
 				</li>
-			</ul>
+			</ul> -->
 		</div>
 		<div class="tab_cont_box">
 			<div class="tab_cont active">
@@ -95,7 +97,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병 3~79% 후유장해</td>
+							<td>질병 3% 이상 후유장해</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -103,7 +105,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>질병 80% 이상 휴유장해</td>
+							<td>질병 50% 이상 후유장해</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
@@ -111,7 +113,23 @@
 							</td>
 						</tr>
 						<tr>
-							<td>상해 3~79% 후유장해</td>
+							<td>질병 80% 이상 후유장해</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해 3% 후유장해</td>
+							<td class="align_r">100,000</td>
+							<td class="align_r">
+								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>상해 50% 이상 후유장해</td>
 							<td class="align_r">100,000</td>
 							<td class="align_r">
 								<div class="input_set right"><input data-value="100,000" type="text" value="100,000">
