--- a/web/resources/html/sub.html
+++ b/web/resources/html/sub.html
@@ -407,7 +407,8 @@
 					<div class="bottom_position">
 						<ul class="util_menu">
 							<li><a class="btn" href="#">고객등록</a></li>
-							<li><a class="btn" href="#">권장금액 · 보장군 설정</a></li>
+							<!--20200707 -->
+							<li><a class="btn" href="#">권장금액 설정</a></li>
 							<li><a class="btn" href="#">가계약조회</a></li>
 						</ul>
 						<div class="btn_area">
@@ -490,7 +491,7 @@
 
 							<div class="box box3">
 								<h3 class="title">고객님<br>보장이 부족합니다.</h3>
-								<div class="text">전체 35개 보장중</div>
+								<div class="text">전체 <span>35</span>개 보장중</div>
 								<ul class="info_box">
 									<li class="no">
 										<span class="tit">미가입</span> <span class="number count">2</span>
