--- a/web/resources/html/컨설팅.html
+++ b/web/resources/html/컨설팅.html
@@ -404,7 +404,8 @@
 					<div class="bottom_position">
 						<ul class="util_menu">
 							<li><a class="btn" href="#">고객등록</a></li>
-							<li><a class="btn" href="#">권장금액 · 보장군 설정</a></li>
+							<!-- 202001017 -->
+							<li><a class="btn" href="#">권장금액 설정</a></li>
 							<li><a class="btn" href="#">가계약조회</a></li>
 						</ul>
 						<div class="btn_area">
