--- a/mobile/resources/html/mindex.html
+++ b/mobile/resources/html/mindex.html
@@ -53,7 +53,8 @@
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
 				<a class="menu01" href="#"><span>고객<br>등록</span></a> 
-				<a class="menu02" href="#"><span>권장금액<br>보장군 설정</span></a> 
+				<!-- 202001017 -->
+				<a class="menu02" href="#"><span>권장금액<br>설정</span></a> 
 				<a class="menu03" href="#"><span>가계약<br>조회</span></a> 
 				<a class="menu04" href="#"><span>PDF<br>샘플보기</span></a>
 				<a class="menu05" href="#"><span>PDF<br>보기</span></a>
