--- a/mobile/resources/html/m가입현황_nodata.html
+++ b/mobile/resources/html/m가입현황_nodata.html
@@ -24,7 +24,7 @@
 					target.find(".btn_text_arr > span").text('접기');
 				} else {
 					target.removeClass("open");
-					target.find(".list_box").slideUp();					
+					target.find(".list_box").slideUp();
 					target.find(".btn_text_arr > span").text('펼쳐보기');
 				}
 			});
@@ -38,7 +38,8 @@
 			<li class="home"><a class="home" href="#">홈으로</a></li>
 			<li class="util">
 				<a class="menu01" href="#"><span>고객<br>등록</span></a> 
-				<a class="menu02" href="#"><span>권장금액<br>보장군 설정</span></a> 
+				<!-- 202001017 -->
+				<a class="menu02" href="#"><span>권장금액<br> 설정</span></a> 
 				<a class="menu03" href="#"><span>가계약<br>조회</span></a> 
 				<a class="menu04" href="#"><span>PDF<br>샘플보기</span></a>
 				<a class="menu05" href="#"><span>PDF<br>보기</span></a>
@@ -102,51 +103,13 @@
 			<!-- insurance_list : s -->
 			<div class="insurance_list">
 				<div class="tit_box">
-					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>3</strong>건</span>
-				</div>
-
-				<div class="list_box">
-					<a class="insurance" href="#">
-						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-						<div class="payment_info">
-							<span class="state">정상</span>
-							<div class="info">
-								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-								<div class="date">2009.07.17~2082.07.17</div>
-							</div>
-						</div>
-						<div class="logo"><img alt="mertiz 메리츠화재" src="/resources/images/gu.renew.logo/logo_meritz.png"></div>
-					</a> 
-					<a class="insurance" href="#">
-						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-						<div class="payment_info">
-							<span class="state">정상</span>
-							<div class="info">
-								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-								<div class="date">2009.07.17~2082.07.17</div>
-							</div>
-						</div>
-						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_hanwha_life.png"></div>
-					</a> 
-					<a class="insurance" href="#">
-						<div class="name">무배당 알파 Plus 보장보험(Ⅱ)0904</div>
-						<div class="payment_info">
-							<span class="state">정상</span>
-							<div class="info">
-								<div class="payment"><strong>69,030</strong>원 <span>매월납/12년</span></div>
-								<div class="date">2009.07.17~2082.07.17</div>
-							</div>
-						</div>
-						<div class="logo"><img alt="한화생명" src="/resources/images/gu.renew.logo/logo_bnp_life.png"></div>
-					</a>
+					<h3 class="sort_tit">정상계약</h3><span class="number"><strong>0</strong>건</span>
 				</div>
 
 				<!-- 가입내역 없음 : s -->
-				<!--
 				<div class="insurance no_insurance">
 					<div>가입내역이 없습니다.</div>
 				</div>
-				-->
 				<!-- 가입내역 없음 : e -->
 			</div>
 			<!-- insurance_list : e -->
@@ -210,7 +173,6 @@
 		</ul>
 	</div>
 	<!-- bottom_fixed_menu_area : e	-->
-	<button class="btn_top">상단으로</button>
 </div>
 
 </body>
