--- a/mobile/resources/m보장분석_00.index.html
+++ b/mobile/resources/m보장분석_00.index.html
@@ -109,7 +109,7 @@
 					<td class="dep2">분석목록(고객목록)</td>
 					<td class="scr_name">검색결과(전체)</td>
 					<td class="scr_id">
-						<a href="html/index.html"  target="_blank">index</a>
+						<a href="html/mindex.html"  target="_blank">index</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -121,7 +121,7 @@
 					<td class="dep2">분석상세(고객상세)</td>
 					<td class="scr_name">전체현황</td>
 					<td class="scr_id">
-						<a href="html/sub.html"  target="_blank">02.고객상세_01.전체현황.html</a>
+						<a href="html/msub.html"  target="_blank">02.고객상세_01.전체현황.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -133,7 +133,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">가입현황</td>
 					<td class="scr_id">
-						<a href="html/가입현황.html"  target="_blank">02.고객상세_02.가입현황.html</a>
+						<a href="html/m가입현황.html"  target="_blank">02.고객상세_02.가입현황.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -145,7 +145,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">가입현황</td>
 					<td class="scr_id">
-						<a href="html/가입현황_nodata.html"  target="_blank">02.고객상세_02.가입현황_내역없음.html</a>
+						<a href="html/m가입현황_nodata.html"  target="_blank">02.고객상세_02.가입현황_내역없음.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -157,7 +157,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">진단상세</td>
 					<td class="scr_id">
-						<a href="html/진단상세.html"  target="_blank">02.고객상세_03.진단상세.html</a>
+						<a href="html/mm진단상세.html"  target="_blank">02.고객상세_03.진단상세.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -169,7 +169,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">컨설팅</td>
 					<td class="scr_id">
-						<a href="html/컨설팅.html"  target="_blank">02.고객상세_04.컨설팅.html</a>
+						<a href="html/m컨설팅.html"  target="_blank">02.고객상세_04.컨설팅.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
@@ -179,7 +179,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">그래프</td>
 					<td class="scr_id">
-						<a href="html/그래프.html"  target="_blank">02.고객상세_05.그래프.html</a>
+						<a href="html/m그래프.html"  target="_blank">02.고객상세_05.그래프.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
@@ -190,7 +190,7 @@
 					<td class="dep2">팝업</td>
 					<td class="scr_name">index</td>
 					<td class="scr_id">
-						<a href="html/팝업-고객등록동의문자발송.html"  target="_blank">팝업-고객등록동의문자발송.html</a>
+						<a href="html/m팝업-고객등록동의문자발송.html"  target="_blank">팝업-고객등록동의문자발송.html</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note"></td>
@@ -200,7 +200,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">가입현황</td>
 					<td class="scr_id">
-						<a href="html/가입현황-상세내역.html"  target="_blank">팝업_가입현황-상세내역.html</a><br>
+						<a href="html/m가입현황-상세내역.html"  target="_blank">팝업_가입현황-상세내역.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -212,7 +212,7 @@
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html/가입현황-상세내역_자동차보험_보장내역없음.html"  target="_blank">팝업_가입현황-상세내역_자동차보험_보장내역없음.html</a><br>
+							<a href="html/m가입현황-상세내역_자동차보험_보장내역없음.html"  target="_blank">팝업_가입현황-상세내역_자동차보험_보장내역없음.html</a><br>
 						</td>
 						<td class="date">2019.12.27</td>
 						<td class="note">
@@ -225,7 +225,7 @@
 						<td class="dep2"></td>
 						<td class="scr_name"></td>
 						<td class="scr_id">
-							<a href="html/가입현황-상세내역_해지계약건.html"  target="_blank">팝업_가입현황-상세내역_해지계약건.html</a><br>
+							<a href="html/m가입현황-상세내역_해지계약건.html"  target="_blank">팝업_가입현황-상세내역_해지계약건.html</a><br>
 						</td>
 						<td class="date">2019.12.31</td>
 						<td class="note">
@@ -237,7 +237,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name">컨설팅</td>
 					<td class="scr_id">
-						<a href="html/팝업-가계약%20추가.html"  target="_blank">팝업_가계약 추가.html</a><br>
+						<a href="html/m팝업-가계약%20추가.html"  target="_blank">팝업_가계약 추가.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -248,7 +248,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/팝업-가계약조회리스트.html"  target="_blank">팝업_가계약조회리스트.html</a><br>
+						<a href="html/m팝업-가계약조회리스트.html"  target="_blank">팝업_가계약조회리스트.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -259,7 +259,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/컨설팅전후비교.html"  target="_blank">팝업_컨설팅전후비교.html</a><br>
+						<a href="html/m컨설팅전후비교.html"  target="_blank">팝업_컨설팅전후비교.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -270,7 +270,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/컨설팅전후비교_nodata.html"  target="_blank">팝업_컨설팅전후비교_nodata.html</a><br>
+						<a href="html/m컨설팅전후비교_nodata.html"  target="_blank">팝업_컨설팅전후비교_nodata.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -281,7 +281,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/팝업-권장금액보장군설정.html"  target="_blank">팝업_권장금액보장군설정.html</a><br>
+						<a href="html/m팝업-권장금액보장군설정.html"  target="_blank">팝업_권장금액보장군설정.html</a><br>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note">
@@ -292,7 +292,7 @@
 					<td class="dep2">퍼블리싱가이드</td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/보장분석_guide_publishing.html"  target="_blank">기존 보장분석 가이드</a>
+						<a href="html/m보장분석_guide_publishing.html"  target="_blank">기존 보장분석 가이드</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
@@ -302,7 +302,7 @@
 					<td class="dep2"></td>
 					<td class="scr_name"></td>
 					<td class="scr_id">
-						<a href="html/guide.html"  target="_blank">form, button 가이드</a>
+						<a href="html/mguide.html"  target="_blank">form, button 가이드</a>
 					</td>
 					<td class="date">2019.12.27</td>
 					<td class="note"><strong></strong></td>
