--- a/web/resources/html/팝업-권장금액보장군설정.html
+++ b/web/resources/html/팝업-권장금액보장군설정.html
@@ -22,12 +22,14 @@
 <!-- layer_pop_wrap: s -->
 <div class="layer_pop_wrap pop_security_set">
 	<div class="layer_pop_header">
-		<h2>권장금액<span class="dot">&#46</span>보장군 설정</h2>
+		<!--20200707 문구변경s-->
+		<h2>권장금액 설정</h2>
+		<!--20200707 문구변경e-->
 	</div>
 	<div class="layer_pop_content">
 		<table class="basic_type">
 			<colgroup>
-				<col style="width:9%">
+				<!-- <col style="width:9%"> -->
 				<col style="width:20%">
 				<col style="width:auto">
 				<col style="width:21%">
@@ -35,7 +37,7 @@
 			</colgroup>
 			<thead>
 			<tr>
-				<th><span class="select">선택</span></th>
+				<!-- <th><span class="select">선택</span></th> -->
 				<th>보장명</th>
 				<th>보장분류</th>
 				<th>권장금액(만원)</th>
@@ -46,7 +48,7 @@
 		<div class="table_scroll">
 			<table class="basic_type">
 				<colgroup>
-					<col style="width:9%">
+					<!-- <col style="width:9%"> -->
 					<col style="width:20%">
 					<col style="width:auto">
 					<col style="width:21%">
@@ -54,7 +56,7 @@
 				</colgroup>
 				<thead>
 				<tr>
-					<th>선택</th>
+					<!-- <th>선택</th> -->
 					<th>보장명</th>
 					<th>보장분류</th>
 					<th>권장금액(만원)</th>
@@ -63,11 +65,11 @@
 				</thead>
 				<tbody>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input checked id="checkbox1" type="checkbox"> <label for="checkbox1"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>사망</th>
 					<td>질병사망</td>
 					<td class="align_c">100,000</td>
@@ -77,11 +79,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox2" type="checkbox"> <label for="checkbox2"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>사망</th>
 					<td>상해사망</td>
 					<td class="align_c">100,000</td>
@@ -91,13 +93,13 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox3" type="checkbox"> <label for="checkbox3"></label>
+							<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>후유장해</th>
-					<td>질병 3~79% 후유장해</td>
+					<td>질병 3% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -105,11 +107,25 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
-							<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
+							<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
+						</div>
+					</td> -->
+					<th>후유장해</th>
+					<td>질병 50% 이상 후유장해</td>
+					<td class="align_c">100,000</td>
+					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
 						</div>
 					</td>
+				</tr>
+				<tr>
+					<!-- <td class="align_c">
+						<div class="check_box_set no_label">
+							<input id="checkbox6" type="checkbox"> <label for="checkbox6"></label>
+						</div>
+					</td> -->
 					<th>후유장해</th>
 					<td>질병 80% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
@@ -119,13 +135,13 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
-							<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
+							<input id="checkbox4" type="checkbox"> <label for="checkbox4"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>후유장해</th>
-					<td>상해 3~79% 후유장해</td>
+					<td>상해 3% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
 					<td class="align_c">
 						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
@@ -133,11 +149,25 @@
 					</td>
 				</tr>
 				<tr>
+					<!-- <td class="align_c">
+						<div class="check_box_set no_label">
+							<input checked id="checkbox5" type="checkbox"> <label for="checkbox5"></label>
+						</div>
+					</td> -->
+					<th>후유장해</th>
+					<td>상해 50% 이상 후유장해</td>
+					<td class="align_c">100,000</td>
 					<td class="align_c">
+						<div class="input_set right"><input data-value="100,000" style="width: 95px;" type="text" value="100,000">
+						</div>
+					</td>
+				</tr>
+				<tr>
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox6" type="checkbox"> <label for="checkbox6"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>후유장해</th>
 					<td>상해 80% 이상 후유장해</td>
 					<td class="align_c">100,000</td>
@@ -146,12 +176,13 @@
 						</div>
 					</td>
 				</tr>
+				
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox7" type="checkbox"> <label for="checkbox7"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>암</th>
 					<td>일반암 진단비</td>
 					<td class="align_c">100,000</td>
@@ -161,11 +192,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox8" type="checkbox"> <label for="checkbox8"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>암</th>
 					<td>고액암 진단비</td>
 					<td class="align_c">100,000</td>
@@ -175,11 +206,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input checked id="checkbox9" type="checkbox"> <label for="checkbox9"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>암</th>
 					<td>유사암 진단비</td>
 					<td class="align_c">100,000</td>
@@ -189,11 +220,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox10" type="checkbox"> <label for="checkbox10"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>뇌혈관질환</th>
 					<td>뇌혈관</td>
 					<td class="align_c">100,000</td>
@@ -203,11 +234,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>뇌혈관질환</th>
 					<td>뇌졸중</td>
 					<td class="align_c">100,000</td>
@@ -217,11 +248,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>뇌혈관질환</th>
 					<td>뇌출혈</td>
 					<td class="align_c">100,000</td>
@@ -231,11 +262,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox11" type="checkbox"> <label for="checkbox11"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>심장질환</th>
 					<td>허혈성 심장질환 진단비</td>
 					<td class="align_c">100,000</td>
@@ -245,11 +276,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>심장질환</th>
 					<td>급성 심근경색증 진단비</td>
 					<td class="align_c">100,000</td>
@@ -259,11 +290,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>의료비</th>
 					<td>질병입원</td>
 					<td class="align_c">100,000</td>
@@ -273,11 +304,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>의료비</th>
 					<td>질병통원</td>
 					<td class="align_c">100,000</td>
@@ -287,11 +318,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>의료비</th>
 					<td>상해입원</td>
 					<td class="align_c">100,000</td>
@@ -301,11 +332,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>의료비</th>
 					<td>상해통원</td>
 					<td class="align_c">100,000</td>
@@ -315,11 +346,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>수술비</th>
 					<td>질병수술비</td>
 					<td class="align_c">100,000</td>
@@ -329,11 +360,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>수술비</th>
 					<td>상해수술비</td>
 					<td class="align_c">100,000</td>
@@ -343,11 +374,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>입원비(일당)</th>
 					<td>질병일당</td>
 					<td class="align_c">100,000</td>
@@ -357,11 +388,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>입원비(일당)</th>
 					<td>상해일당</td>
 					<td class="align_c">100,000</td>
@@ -371,11 +402,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>입원비(일당)</th>
 					<td>질병 간병인지원 입원일당</td>
 					<td class="align_c">100,000</td>
@@ -385,11 +416,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>입원비(일당)</th>
 					<td>상해 간병인지원 입원일당</td>
 					<td class="align_c">100,000</td>
@@ -399,11 +430,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치매</th>
 					<td>중증치매진단</td>
 					<td class="align_c">100,000</td>
@@ -413,11 +444,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치매</th>
 					<td>경증치매진단</td>
 					<td class="align_c">100,000</td>
@@ -427,11 +458,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>운전자</th>
 					<td>교통사고처리 지원금</td>
 					<td class="align_c">100,000</td>
@@ -441,11 +472,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>운전자</th>
 					<td>변호사 선임비용</td>
 					<td class="align_c">100,000</td>
@@ -455,11 +486,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>운전자</th>
 					<td>벌금</td>
 					<td class="align_c">100,000</td>
@@ -469,11 +500,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>운전자</th>
 					<td>자동차사고 부상치료비</td>
 					<td class="align_c">100,000</td>
@@ -483,11 +514,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>배상책임</th>
 					<td>일상생활 배상책임</td>
 					<td class="align_c">100,000</td>
@@ -497,11 +528,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치아,화상,골절</th>
 					<td>치아보철 치료비</td>
 					<td class="align_c">100,000</td>
@@ -511,11 +542,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치아,화상,골절</th>
 					<td>치아보존 치료비</td>
 					<td class="align_c">100,000</td>
@@ -525,11 +556,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치아,화상,골절</th>
 					<td>화상 진단비</td>
 					<td class="align_c">100,000</td>
@@ -539,11 +570,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td class="align_c">
+					<!-- <td class="align_c">
 						<div class="check_box_set no_label">
 							<input id="checkbox12" type="checkbox"> <label for="checkbox12"></label>
 						</div>
-					</td>
+					</td> -->
 					<th>치아,화상,골절</th>
 					<td>골절 진단비</td>
 					<td class="align_c">100,000</td>
